2005-05-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/math/signbit.c (__signbit):  Make return value
	consistent with GCC's __builtin_signbit.
	* mingwex/math/signbitf.c (__signbitf):  Likewise.
	* mingwex/math/signbitf.c (__signbitl):  Likewise.
	* include/math.h (__signbit, __signbitf, __signbitl): Likewise
	for inlines.

2005-05-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/_mingw.h (__MINGW_ATTRIB_NONNULL): Don't define as
	variadic macro.
	* mingwex/mbrtowc.c (__mbrtowc_cp): Use __MINGW_ATTRIB_NONNULL.
	Remove unused MBTOWC_FLAGS define.

2005-04-23  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/mbrtowc.c: New file.
	* mingwex/wcrtomb.c: New file.
	* mingwex/btowc.c: New file.
	* mingwex/wctob.c: New file.
	* mingwex/mb_wc_common.h: New file.
	* mingwex/Makefile.in (DISTFILES): Add new files.
	(Q8_OBJS): Add new objects.
	* include/wchar.h: Adjust comment about mbrtowc() and related
	funcions. Add __restrict__ to pointer params in prototypes.
	(wmemset. wmemchr, wmemcpy, wmemmove, wcstoll, wcstoull): Remove
	arg names from protototypes.

2005-04-23  Wu Yongwei  <adah@sh163.net>

	* mingwex/dirent.c: Formatting changes.
	* mingwex/dirent.c (_topendir): Make the end-of-path slash check
	MBCS-safe.

2005-03-31  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/_mingw.h (__MINGW_ATTRIB_NONNULL): Define.

2005-03-24  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdio.h (__mingw_fwrite): Change return value to
	size_t.
	* mingwex/mingw-fseek.c (__mingw_fwrite): Likewise.

2005-03-15  Hans Leidekker  <hans@it.vu.nl>

	* include/malloc.h (_FREEENTRY, _USEDENTRY): Correct defines.

2005-02-25  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wctype.h (wctrans): Remove _CRTIMP.
	(towctrans): Likewise.
	(wctype): Likewise,

2005-02-25  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wctype.h:  Add comment on wctrans, towctrans, wctype.
